2013-11-20  Cedric Bail

	* Eina: Fix a possible race condition during eina_file_close.
	* Edje: Fix use of eina_hash_pointer to actually look at the pointer.

2013-11-19  Tom Hacohen

	* Evas textblock: Fixed order of tags inserted with markup_app/prepend.

2013-11-05  Youngbok Shin

        * Edje: Add null checking for name of anchor and item in geometry get functions.

2013-11-03  Christophe Sadoine

        * Eet: Added EET_DATA_DESCRIPTOR_ADD_MAPPING_BASIC().

2013-10-24  Sung W. Park (sung_)

        * EvasGL: Fixed direct rendering mode not clipping to its clip region.

2013-10-24  Youngbok Shin

        * Evas: Fix textblock rendering to properly set render operation on the context.

2013-10-18  Youngbok Shin

        * Evas: Fixed the textblock format to be drawn according to the glyph's
	horizontal advance width.

2013-10-15  ChunEon Park (Hermet)

        * Evas: Fixed the map surface to be updated properly. By tranversing the
        whole of the map target's tree, it decides to update the map
        surface to be redrawn if one of the objects is changed except the
        clipper itself.

2013-10-15  ChunEon Park (Hermet)

        * Edje: Fixed memory leak in the edje map color transition.

2013-10-11  Carsten Haitzler (The Rasterman)

        * Eina: deprecate/remove all the eina_error setting (and getting)
        within efl no one uses it and it frankly it much more pain
        than it's worth. the api's are still there, and efl api's still
        fail as they did before.. they just don't ALSO set eina_error.

2013-10-11  Cedric Bail

	* Eina: add Eina_Spinlock API,
	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare,
	Eina_Chained_Mempool.
	* Eet: replace Eina_Lock by Eina_Spinlock in Eet_Dictionnary.
	* Evas: replace Eina_Lock by Eina_Spinlock in Evas_ScaleCache, Evas_Async_Events and Image_Entry.
	* Ecore: use Eina_Spinlock for Ecore_Thread.

2013-10-10  Carsten Haitzler (The Rasterman)
