@@ -437,6 +437,7 @@ Fixes:
      - Fixed memory leak in the edje map color transition.
      - Add null checking for name of anchor and item in geometry get functions.
      - Fix use of eina_hash_pointer to actually look at the pointer value.
+     - Fix to update map-enabled part when the edje object is moved.
 
     * Efreet:
      - Fix desktop command parsing of https.
